[package]
name = "stock-data"
version = "0.1.0"
authors = ["Brandon J. Lacy lacy.brandon.j@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
